objects/PLA_Page_ShipsetList__c.object
<CustomObject>
    <description>Stores the data in the Shipset list from the PL_Calculate Page/Controller (VFP). Then it is is used to render the data in the PL_View page for Product Services</description>
    <fields>
        <fullName>Category_Net_Price8__c</fullName>
        <label>Category Net Price</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Sales_per_Shipset5__c</fullName>
        <label>Cost of Sales per Shipset</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_Seat9__c</fullName>
        <label>Cost per Seat</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Percentage7__c</fullName>
        <label>Gross margin Percentage</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin6__c</fullName>
        <label>Gross Margin</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Sales0__c</fullName>
        <label>Gross Sales</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Sales4__c</fullName>
        <label>Net Sales</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Credits2__c</fullName>
        <label>Other Credits</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PL Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipName>PLA_Page_ShipsetLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Color_Code__c</fullName>
        <label>Row Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipset_Discount1__c</fullName>
        <label>Shipset Discount</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reduction3__c</fullName>
        <label>Total Reduction</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Archived Shipset Data</label>
    <nameField>
        <label>PLA Page_ShipsetList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Shipset Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>